# opspilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml
docs/: ARCHITECTURE.md  deployment_and_testing_guide.md
docs/stages/: stage0_foundation.md  stage1_agent_core.md  stage2_agent_advanced.md  stage3_multi_agent.md  stage4_rag_knowledge_base.md  stage5_gateway_finetune.md  stage6_engineering_delivery.md
experiments/stage5_finetune/: README.md  compare_outputs.py  requirements.txt  train_qlora.py
fixtures/: alertmanager_webhook.json  finetune_seed_prompts.jsonl  kubectl_describe.json  kubectl_pods.json  kubectl_write.json  loki_logs.json  prometheus_metrics.json  rag_eval_qa.json  runbook_crashloop.json  runbook_high_cpu.json  runbook_oom.json
fixtures/runbook_docs/: argo_sync_fail.md  audit_log_flood.md  blue_green_switch.md  canary_deploy_abort.md  ceph_cluster_warn.md  cert_manager_renew_fail.md  configmap_mount_fail.md  connection_reset.md  cordon_node.md  coredns_failure.md  crashloopbackoff.md  disk_pressure.md  dns_resolution_fail.md  drain_node.md  elasticsearch_cluster_red.md  evicted_pod.md  gitops_drift_detect.md  grafana_dashboard_404.md  helm_upgrade_fail.md  image_scan_critical.md  imagepullbackoff.md  ingress_502.md  ingress_503.md  ingress_tls_expired.md  kafka_consumer_lag.md  liveness_probe_fail.md  loki_parse_error.md  (+26 more)
infra/: docker-compose.yml
scripts/: __init__.py  ci_eval_summary.py  demo_smoke.py  ingest_runbooks.py  prepare_sft_dataset.py  run_eval.py  run_rag_eval.py  test_deploy.sh
tests/: conftest.py  test_agent_client.py  test_agent_init.py  test_agent_llm_context.py  test_agent_protocols.py  test_alert_handler.py  test_alert_normalization.py  test_alert_webhook.py  test_audit.py  test_auth.py  test_ci_eval_summary.py  test_cli.py  test_config.py  test_confirm.py  test_confirmation.py  test_demo_smoke.py  test_eval_harness.py  test_feishu_callback.py  test_feishu_card.py  test_feishu_ws.py  test_feishu_ws_agent_client.py  test_fixtures_path.py  test_gateway_app.py  test_gateway_config.py  test_gateway_providers.py  test_gateway_rate_limit.py  test_guardrails.py  test_http_api.py  test_http_api_channels.py  test_kubectl_policy.py  test_kubectl_write.py  test_langgraph_agent.py  test_llm_client.py  test_log_tools.py  test_memory_checkpoint.py  test_new_tools.py  test_observability_metrics.py  test_plan_execute.py  test_pod_status.py  test_prepare_sft_dataset.py  (+15 more)
(+69 files in other folders)
