[project]
name = "opspilot"
version = "0.1.0"
description = "一个用 LLM Agent 驱动的运维智能助手平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "typer>=0.25.1",
    "anyio>=4.13.0",
    "lark-oapi>=1.6.5",
]

[project.scripts]
opspilot = "opspilot.entrypoints.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.13",
    "pyright>=1.1.409",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opspilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
