[project]
name = "opspilot"
version = "0.1.0"
description = "一个用 LLM Agent 驱动的运维智能助手平台"
readme = "README.md"
requires-python = ">=3.12"
# 依赖策略：声明下限 (>=) 保证最低兼容版本；可复现安装以提交的 uv.lock 为准。
# 生产环境按需收紧上限，避免主版本意外升级；开发组见 [dependency-groups].dev。
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "typer>=0.25.1",
    "anyio>=4.13.0",
    "lark-oapi>=1.6.5",
    "langgraph>=1.2.0",
    "langchain-openai>=1.2.1",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "qdrant-client>=1.16.0",
    "fastembed>=0.5.0",
    "redis>=5.2.0",
    "prometheus-client>=0.21.0",
    "tenacity>=9.1.4",
]

[project.scripts]
opspilot = "opspilot.entrypoints.cli:main"
opspilot-gateway = "opspilot.entrypoints.llm_gateway:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.13",
    "pyright>=1.1.409",
    "ragas>=0.4.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opspilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:lark_oapi",
    "ignore:There is no current event loop:DeprecationWarning:lark_oapi",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
